--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,7 +16,22 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-      </tr>
+
+       <td>
+      <% if book.favorited_by?(current_user) %>
+      <%= link_to book_favorites_path(book.id), method: :delete do %>
+        ♥<%= book.favorites.count %>
+      <% end %>
+    <% else %>
+      <%= link_to book_favorites_path(book.id), method: :book do %>
+        ♡<%= book.favorites.count %>
+      <% end %>
+  <% end %>
+  </td>
+  <td>
+    コメント数:<%= book.book_comments.count %>
+ </td>
     <% end %>
+    </tr>
   </tbody>
 </table>
