--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,17 +17,9 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
 
-       <td>
-      <% if book.favorited_by?(current_user) %>
-      <%= link_to book_favorites_path(book.id), method: :delete do %>
-        ♥<%= book.favorites.count %>
-      <% end %>
-    <% else %>
-      <%= link_to book_favorites_path(book.id), method: :book do %>
-        ♡<%= book.favorites.count %>
-      <% end %>
-  <% end %>
-  </td>
+       <td id="favorite_btn_<%= book.id %>">
+       　<%= render "favorites/btn", book: book %>
+       </td>
   <td>
     コメント数:<%= book.book_comments.count %>
  </td>
