--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,31 +27,15 @@
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
           <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
     <% end %>
-     <td>
-      <% if @book.favorited_by?(current_user) %>
-      <%= link_to book_favorites_path(@book.id), method: :delete do %>
-        ♥<%= @book.favorites.count %>
-      <% end %>
-
-    <% else %>
-
-      <%= link_to book_favorites_path(@book.id), method: :book do %>
-        ♡<%= @book.favorites.count %>
-      <% end %>
-   <% end %>
-     </td>
+     <td id="favorite_btn_<%= @book.id %>">
+       　<%= render "favorites/btn", book: @book %>
+       </td>
     <td>
     コメント数:<%= @book.book_comments.count %>
  </td>
  </tr>
   </div>
   </table>
-
-
-
-
-
-
  <table>
    <tbody>
     <tr>
@@ -72,16 +56,11 @@
   </td>
   </tr>
  </tbody>
-
 </table>
-
-
   <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
   <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに", class: "w-100" %>
   <%= f.submit "送信" %>
 <% end %>
-
-
     </div>
   </div>
 </div>
