--- a/app/views/searches/search_result.html.erb
+++ b/app/views/searches/search_result.html.erb
@@ -2,14 +2,25 @@
 
 <table class="table table-hover table-inverse">
   <% if @range == "User" %>
-    <tbody>
-      <% @users.each do |user| %>
-       <tr>
-         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
-         <td><%= user.name %></td>
-       </tr>
+     <% @users.each do |user| %>
+      <tr>
+        <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
+        <td><%= user.name %></td>
+        <td>フォロー数: <%= user.followings.count %></td>
+        <td>フォロワー数: <%= user.followers.count %></td>
+        <td>
+        <% if current_user != user %>
+        <% if current_user.following?(user) %>
+          <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+        <% else %>
+          <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+        <% end %>
       <% end %>
-    </tbody>
+      </td>
+        <td><%= link_to 'Show', user_path(user.id) %></td>
+      </tr>
+    <% end %>
+  </tbody>
   <% else %>
     <tbody>
       <% @books.each do |book| %>
@@ -18,6 +29,6 @@
           <td><%= book.body %></td>
         </tr>
       <% end %>
-    </tbody>  
+    </tbody>
   <% end %>
 </table>
